fixed overlapping navbar

--- a/client/src/pages/ContactForm/ContactForm.css
+++ b/client/src/pages/ContactForm/ContactForm.css
@@ -20,6 +20,7 @@
 
 html,
 body {
+    margin: 161px;
     height: 100%;
 }
 
